feat: last jwt implementation adjustments
